--- a/notebooks/benin_eda.ipynb
+++ b/notebooks/benin_eda.ipynb
@@ -392,8 +392,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "week-0",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
