Remove unnecessary comments and set execution counts to null in Jupyter notebook

--- a/notebooks/solar data EDA.ipynb
+++ b/notebooks/solar data EDA.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -202,7 +202,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "# Load datasets with correct paths\n",
+        "\n",
         "df_togo = pd.read_csv(r\"c:\\Users\\hp\\OneDrive\\Desktop\\solar-challenge-week1\\data\\togo-dapaong_qc.csv\")\n",
         "df_sierra = pd.read_csv(r\"c:\\Users\\hp\\OneDrive\\Desktop\\solar-challenge-week1\\data\\sierraleone-bumbuna.csv\")\n",
         "\n",
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -340,7 +340,7 @@
         "from scipy.stats import zscore\n",
         "\n",
         "df[\"z_modA\"] = zscore(df[\"ModA\"])\n",
-        "df[\"outlier\"] = (df[\"z_modA\"].abs() > 3)  # Mark as outlier if z > 3\n"
+        "df[\"outlier\"] = (df[\"z_modA\"].abs() > 3)  \n"
       ]
     },
     {
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -511,10 +511,10 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Replace the filename with your actual CSV file path\n",
+        "\n",
         "df = pd.read_csv(r\"c:\\Users\\hp\\OneDrive\\Desktop\\solar-challenge-week1\\data\\benin-malanville.csv\")\n",
         "\n",
-        "# Then you can run:\n",
+        "\n",
         "print(df.describe())\n",
         "print(df.isna().sum())\n"
       ]
